# debug_plt

./: .gitignore  LICENSE  README.md  pltdbg.py  pyproject.toml  tedasuke.py  test_tedasuke.py
.github/workflows/: CI.yaml
examples/debug_plot/: README.md  main.py  requirements.txt
