[tool.poetry]
name = "tedasuke"
version = "0.1.0"
description = ""
authors = ["ucpr <contact@ucpr.dev>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"
black = "^20.8b1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
